--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,15 +4,14 @@ on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.20.x"
-      - name: Install dependencies
-        run: go get .
+      - name: Install Soda
+        run: go install -tags sqlite github.com/gobuffalo/pop/v6/soda@latest
       - name: Test
         run: make test
       - name: Build
