--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   dio: ^5.3.2
+  firebase_auth: ^4.15.3
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
