--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Your app needs access to the camera to take photos.</string>
 	<key>CFBundleDisplayName</key>
 	<string>Warrant</string>
 	<key>CFBundleExecutable</key>
