--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: ^5.3.2
   firebase_auth: ^4.15.3
   google_sign_in: ^6.1.6
+  camera: ^0.9.4+5
 
 dev_dependencies:
   flutter_test:
