--- a/billtonapp/pubspec.yaml
+++ b/billtonapp/pubspec.yaml
@@ -34,12 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
+  firebase_core: ^2.26.0
+  firebase_auth: ^4.17.7
   google_sign_in: ^6.2.1
-  image_picker: ^0.8.4+5  # Add this line for image picking functionality
-  firebase_storage: ^11.6.5  # Add this line for Firebase Storage functionality
-
+  image_picker: ^0.8.9 # Add this line for image picking functionality
+  firebase_storage: ^11.6.8 # Add this line for Firebase Storage functionality
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +49,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -80,9 +79,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  - family: Schyler
-    fonts:
-      - asset: assets/fonts/JacquardaBastarda9-Regular.ttf
+    - family: Schyler
+      fonts:
+        - asset: assets/fonts/JacquardaBastarda9-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
